ADD ViewForms frmMain Events; frmAlta && frmDetalle init; Finish Insert, Modify, Delete articulo from frmMain DataGridView

--- a/ViewForms/ViewForms.csproj
+++ b/ViewForms/ViewForms.csproj
@@ -46,6 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmAlta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAlta.Designer.cs">
+      <DependentUpon>frmAlta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmDetalle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDetalle.Designer.cs">
+      <DependentUpon>frmDetalle.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +66,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmAlta.resx">
+      <DependentUpon>frmAlta.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -87,6 +102,10 @@
     <ProjectReference Include="..\Dominio\Dominio.csproj">
       <Project>{8cb6af5c-421d-4dc0-bf99-bf864c4f7de6}</Project>
       <Name>Dominio</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Helper\Helper.csproj">
+      <Project>{24b38c4c-2fe0-4e03-b4ee-7ae7019004cb}</Project>
+      <Name>Helper</Name>
     </ProjectReference>
     <ProjectReference Include="..\Negocio\Negocio.csproj">
       <Project>{68b7e2a0-b444-4e2f-89a4-abed958cb44c}</Project>
